erDiagram
  colors {
    int id "PK"
    string name
  }
  customers {
    int id "PK"
    string name
    string phone
    string email
    string address
    string customer_group
    string note
    string created_at
  }
  discounts {
    int id "PK"
    string code "UK"
    string type
    float value
    float min_order
    float max_discount
    string start_date
    string end_date
    int quantity
    int used_count
    string status
    int usage_limit
    int per_customer_limit
    float revenue_applied
    float total_discount_amount
    string created_at
  }
  invoice_items {
    int id "PK"
    int invoice_id
    int variant_id
    int quantity
    float price
    int imei_id
    string imei
    string product_name
    string storage
    string color
    int warranty_month
  }
  invoices {
    int id "PK"
    int customer_id
    int user_id
    float total_price
    string created_at
    float subtotal
    string discount_code
    float discount_amount
    string payment_method
    float paid_amount
    float change_amount
    string status
  }
  product_imeis {
    int id "PK"
    int variant_id "NOT_NULL"
    string imei "UK NOT_NULL"
    string status
    float import_price
    string note
    string created_at
    string sold_at
    int invoice_item_id
  }
  product_variants {
    int id "PK"
    int product_id
    int storage_id
    int color_id
    float price
    int stock
  }
  products {
    int id "PK"
    string name
    string brand
    string description
    float base_price
  }
  storages {
    int id "PK"
    string name
  }
  users {
    int id "PK"
    string full_name "NOT_NULL"
    string birth_date
    string gender
    string role
    string phone
    string email "UK"
    string address
    string username "UK NOT_NULL"
    string employee_code "UK"
    string password "NOT_NULL"
    string status
    string created_at
  }
  warranties {
    int id "PK"
    int invoice_item_id
    string status
    string start_date
    string end_date
    int customer_id
    int imei_id
    string imei
    string product_name
    string note
    string receive_date
    string return_date
    string issue
    string device_condition
    string tech_note
    string created_at
  }
  product_variants ||--o{ invoice_items : "id to variant_id"
  invoices ||--o{ invoice_items : "id to invoice_id"
  users ||--o{ invoices : "id to user_id"
  customers ||--o{ invoices : "id to customer_id"
  invoice_items ||--o{ product_imeis : "id to invoice_item_id"
  product_variants ||--o{ product_imeis : "id to variant_id"
  colors ||--o{ product_variants : "id to color_id"
  storages ||--o{ product_variants : "id to storage_id"
  products ||--o{ product_variants : "id to product_id"
  invoice_items ||--o{ warranties : "id to invoice_item_id"